--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-header></app-header>
 <app-pokemon-list></app-pokemon-list>
-
-<footer class="footer">
-  <p> <img width="20px" class="img-footer" src="../assets/img/pokebola.png" alt=""> Pokemóns - 2021</p>
-</footer>
+<app-footer></app-footer>
